# drift

./: CMakeLists.txt
.github/workflows/: build.yml
Resources/WebUI/: index.html
Resources/WebUI/assets/: index.css  index.js
Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
web-ui/: index.html  package-lock.json
web-ui/src/: App.tsx  index.css
web-ui/src/components/: ActivationScreen.tsx  DriftVisualizer.tsx
web-ui/src/hooks/: useJuceParam.ts  useVisualizerData.ts
